# ProjectSoftwareEngineering

./: CMakeLists.txt  MQTTconn.cpp  README.md
CppCode/: CMakeLists.txt  DBconn.cpp  DBconn.h  MQTTconn.h
CppCode/inc/: DBconn.h  MQTTconn.h
CppCode/src/: DBconn.cpp  MQTTconn.cpp
MicroPythoncode/: main.py  unit_testing.py
MicroPythoncode/html/: boot_8py.html  files.html  main_8py.html  menudata.js  namespaceboot.html  namespacemain.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaceunit__testing.html  unit__testing_8py.html
MicroPythoncode/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  files_2.js  functions_1.js  functions_2.js  functions_3.js  namespaces_2.js  searchdata.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
MicroPythoncode/latex/: refman.tex
MicroPythoncode/lib/: LTR329ALS01.py
PythonCode/: MQTT_client.py  MySQL_client.py  main.py
PythonCode/tests/: test_MQTT_client.py  test_MySQL_client.py
